--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,84 +1,63 @@
 <div class="styles_white__WbD_6 styles_bg-valentino__H0AAY footer_footer-upper__NHeY0">
-  <div class="container_container__NjHmW">
+  <div class="container">
     <div class="footer_footer-menu__4BjIY">
-      
     </div>
     <div class="copyright_footer-notes__e3Yqw copyright_bg-white-lilac__MG_Zv styles_left-to-c__WITFr">
       <div class="container_container__NjHmW">
-        <div class="container-fluid">
-
-            <!-- <div class="flex flex-col md:flex-row gap-y-5 items-start md:items-center justify-around px-5 py-5 md:py-0">
-              <div>
-                <p class="text-white styles_p__FMqqh styles_no-margin-p__RYgNA footer-text">
+       
+          
+            <div class="row align-items-center">
+              <div class="col-md-4">
+                <p class="text-white mb-0">
                   22 Frederick St, Suite 700, Kitchener ON N2H 6M6
                 </p>
               </div>
-             
-             
-            </div> -->
-
-
-
-            <div class="grid grid-cols-3 gap-4">
-              <div >
-                <p class="text-white styles_p__FMqqh styles_no-margin-p__RYgNA footer-text">
-                  22 Frederick St, Suite 700, Kitchener ON N2H 6M6
-                </p>
+              <div class="col-md-4">
+                <div class="icon-sp">
+                  <ul class="mb-0">
+                    <li>
+                      <i class="fa-brands fa-xl fa-facebook-f text-white"></i>
+                    </li>
+                  </ul>
+                  <li>
+                    <i class="fa-brands fa-xl fa-linkedin-in text-white ms-4"></i>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-xl fa-x-twitter text-white ms-4"></i>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-xl fa-instagram text-white ms-4"></i>
+                  </li>
+                </div>
               </div>
-              <div class="md:text-center text-white justify-end">
-                
-                <div class="flex flex-col md:flex-row md:items-center gap-5 icon-font">
-                  <div class="icon-sp">
-                    <i class="fa-brands fa-facebook-f"></i>
-                  </div>
-                  <div class="icon-sp">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                  </div>
-                  <div class="icon-sp">
-                  <i class="fa-brands fa-x-twitter"></i>
-                  </div>
-                  <div class="icon-sp">
-                    <i class="fa-brands fa-instagram"></i>
-                  </div>
-                                  
+              <div class="col-md-4">
+                <div class="text-end">
+                  <img src="/assets/app-store.svg" alt="">
+                  <img src="/assets/play-store.png" alt="" class="playstore-png">
+                </div>
               </div>
             </div>
-            <div>
-              <div class="flex items-center gap-5">
-                <a target="_blank" href="https://apps.apple.com/ca/app/jobcart/id1447562870">
-                  <img src="/assets/app-store.svg" class="border border-white rounded-lg" alt="" />
-                </a>
-                <a target="_blank" href="https://play.google.com/store/apps/details?id=ca.jobcart.job&hl=en_CA&gl=US">
-                  <img src="/assets/play-store.png" class="w-28 border border-white rounded-lg" alt="" />
-                </a>
-              </div>
-        
-            </div>
-            </div>
+          
+     
+      </div>
+    </div>
+  </div>
+</div>
+<div class="bg-black pt-3 pb-3" style="border-top: 1px solid white;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 text-center">
+        <p class="text-white mb-0" style="font-size: 14px;">Copyright © 2023. All rights reserved</p>
+      </div>
+      <div class="col-md-6 text-center">
+        <div class="link-tab">
+          <a href="contact-us"> Contact Us </a>
+          <a href="blog"> Blog </a>
+          <a href="cookie-policy"> Cookie Policy </a>
+          <a href="terms-of-service"> Terms Of Service </a>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="border-t-2 border-gray-100 py-2 dark:bg-gray-900">
-  <div class="copyright_footer flex flex-col md:flex-row gap-y-5 items-start md:items-center justify-around px-5 py-5 md:py-0 p-4">
-    <div class="text-white">
-       <p>Copyright © 2023. All rights reserved</p>      
-    </div>
-    <div class="md:text-center text-white">
-      <div class="flex flex-col md:flex-row md:items-center gap-5">
-        <a href="about" style="display:none;"> About Us </a>
-        <a href="contact-us"> Contact Us </a>
-        <a href="blog"> Blog </a>
-        <a href="cookie-policy"> Cookie Policy </a>
-        <a href="terms-of-service"> Terms Of Service </a>
       </div>
-    </div>
-   
   </div>
 </div>
-
-
 
