update header and footer

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,16 +1,18 @@
-<!-- <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+<!-- hero section -->
+<section style="background-color: #267f6a;">
+  <div class="container" >
+    <div class="row pt-4 align-items-center">
+      <div class="col-md-3">
+        <h3 class="section-para">
+          We work better together with big ideas and great talent.
+        </h3>
+        <h6 class="section-text">Connect to the Right People, Right Here, Right Now.</h6>
+        <a href="{{appUrl}}/auth/sign-in/" class="btn btn-outline-secondary text-white">Get Started</a>
+          <a href="{{url}}" target="_blank"><img src="/assets/jc-qr-code-my-white.png" class="img-fluid" /></a>
+      </div>
+      <div class="col-md-9 text-end">
+        <img src="/assets/large.png" alt="">
+      </div>
     </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">An item</li>
-      <li class="list-group-item">A second item</li>
-      <li class="list-group-item">A third item</li>
-    </ul>
-    <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
-  </div> -->
+  </div>
+</section>
