--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -11,8 +11,258 @@
           <a href="{{url}}" target="_blank"><img src="/assets/jc-qr-code-my-white.png" class="img-fluid" /></a>
       </div>
       <div class="col-md-9 text-end">
-        <img src="/assets/large.png" alt="">
+        <img class="hov-eff" src="/assets/large.png" alt="">
       </div>
     </div>
   </div>
+</section>
+<section>
+  <div class="container pb-5">
+    <div class="pt-5 pb-5">
+      <h3 class="commn-header">
+        Jobs By Category
+      </h3>
+    </div>
+    <div class="row pt-3 pb-3">
+      <div class="col-md">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+    </div>
+    <div class="row pt-3 pb-3">
+      <div class="col-md">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+    </div>
+    <div class="row pt-3 pb-3">
+      <div class="col-md">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+    </div>
+    <div class="row pt-3 pb-3">
+      <div class="col-md">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+    </div>
+    <div class="row pt-3 pb-3">
+      <div class="col-md">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+    </div>
+    <div class="row pt-3 pb-3">
+      <div class="col-md">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col-md">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+<section>
+  <div class="container">
+    <div class="pt-5 pb-5">
+      <h3 class="commn-header">
+        Take control of every step, from finding <br>candidates to integrating them into <br>your organization.
+      </h3>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <img class="img-fluid" src="/assets/1.jpeg" alt="">
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="/assets/2.jpg" alt="">
+      </div>
+    </div>
+  </div>
+  
 </section>
