--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -18,3 +18,41 @@ a.btn.btn-outline-secondary.text-white {
     font-size: 14px;
     margin-bottom: 15px;
 }
+.commn-header{
+    text-align: center;
+    font-weight: 600;
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+}
+.category-box{
+    padding: 0.75rem 1.25rem;
+    cursor: pointer;
+    background-color: #eff9f7 !important;
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / .1), 0 4px 6px -4px rgb(0 0 0 / .1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.category-box:hover{
+    --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / .1), 0 8px 10px -6px rgb(0 0 0 / .1);
+    --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.category-header{
+    font-weight: 500;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    margin-bottom: 0;
+    white-space: nowrap;
+}
+.category-text{
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / var(--tw-text-opacity));
+    font-size: .875rem;
+    line-height: 1.25rem;
+    margin-bottom: 0;
+}
+.hov-eff:hover{
+    animation: pulse 2s cubic-bezier(.4,0,.6,1) infinite;
+}
