--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,14 @@
 @import 'bootstrap/scss/mixins';
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+body {
+    margin: 0;
+    font-family: 'Poppins', sans-serif
+}
+html,
+body {
+    height: 100%;
+}
 
 
 
