--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -256,13 +256,32 @@
       </h3>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 text-center d-flex flex-column align-items-center">
         <img class="img-fluid" src="/assets/1.jpeg" alt="">
+        <p class="sec-hed clr">SCOUT & ENTICE</p>
+        <p class="sec-hed-para">Seek and entice potential candidates</p>
+        <p class="sec-hed-text">Effortlessly fill your pipeline with candidates using tools like one-click job posting to 200+ sites, sourcing assisted by AI, employee recommendations, and more.</p>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 text-center d-flex flex-column align-items-center">
         <img class="img-fluid" src="/assets/2.jpg" alt="">
+        <p class="sec-hed clr_1">SYSTEMATIZE & CONNECT</p>
+        <p class="sec-hed-para">Recruit top talent in a fraction of the time</p>
+        <p class="sec-hed-text">Accelerate your recruitment efforts with a platform that streamlines and automates routine, time-consuming procedures like interview scheduling and approvals.</p>
+      </div>
+      <div class="col-md-6 text-center d-flex flex-column align-items-center">
+        <img class="img-fluid" src="/assets/3.jpg" alt="">
+        <p class="sec-hed clr_2">ENGAGE & SUPERVISE</p>
+        <p class="sec-hed-para">Great hiring leads to great employment</p>
+        <p class="sec-hed-text">Make use of electronic signatures and personalized onboarding for new recruits while keeping all employee data in one central location..</p>
+      </div>
+      <div class="col-md-6 text-center d-flex flex-column align-items-center">
+        <img class="img-fluid" src="/assets/4.jpg" alt="">
+        <p class="sec-hed clr_3">EXPLORE APPRAISE & UNITE</p>
+        <p class="sec-hed-para">Put the qualified candidates ahead</p>
+        <p class="sec-hed-text">Use a centralized platform for reviewing applications, discussing candidates, and making final hiring decisions as a team.</p>
       </div>
     </div>
+    
   </div>
   
 </section>
