--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -16,6 +16,8 @@
     </div>
   </div>
 </section>
+
+<!-- Jobs By Category section -->
 <section>
   <div class="container pb-5">
     <div class="pt-5 pb-5">
@@ -246,42 +248,58 @@
       </div>
     </div>
   </div>
-
 </section>
+
+
+
 <section>
   <div class="container">
-    <div class="pt-5 pb-5">
+    <div class="pt-5">
       <h3 class="commn-header">
         Take control of every step, from finding <br>candidates to integrating them into <br>your organization.
       </h3>
     </div>
-    <div class="row">
+    <div class="row" style="padding-top: 2.5rem;
+    padding-bottom: 2.5rem;">
       <div class="col-md-6 text-center d-flex flex-column align-items-center">
         <img class="img-fluid" src="/assets/1.jpeg" alt="">
         <p class="sec-hed clr">SCOUT & ENTICE</p>
         <p class="sec-hed-para">Seek and entice potential candidates</p>
         <p class="sec-hed-text">Effortlessly fill your pipeline with candidates using tools like one-click job posting to 200+ sites, sourcing assisted by AI, employee recommendations, and more.</p>
+        <a class="clr text-decoration-none" href="">Learn More</a>
       </div>
       <div class="col-md-6 text-center d-flex flex-column align-items-center">
         <img class="img-fluid" src="/assets/2.jpg" alt="">
         <p class="sec-hed clr_1">SYSTEMATIZE & CONNECT</p>
         <p class="sec-hed-para">Recruit top talent in a fraction of the time</p>
         <p class="sec-hed-text">Accelerate your recruitment efforts with a platform that streamlines and automates routine, time-consuming procedures like interview scheduling and approvals.</p>
+        <a class="clr_1 text-decoration-none" href="">Learn More</a>
       </div>
       <div class="col-md-6 text-center d-flex flex-column align-items-center">
         <img class="img-fluid" src="/assets/3.jpg" alt="">
         <p class="sec-hed clr_2">ENGAGE & SUPERVISE</p>
         <p class="sec-hed-para">Great hiring leads to great employment</p>
         <p class="sec-hed-text">Make use of electronic signatures and personalized onboarding for new recruits while keeping all employee data in one central location..</p>
+        <a class="clr_2 text-decoration-none" href="">Learn More</a>
       </div>
       <div class="col-md-6 text-center d-flex flex-column align-items-center">
         <img class="img-fluid" src="/assets/4.jpg" alt="">
         <p class="sec-hed clr_3">EXPLORE APPRAISE & UNITE</p>
         <p class="sec-hed-para">Put the qualified candidates ahead</p>
         <p class="sec-hed-text">Use a centralized platform for reviewing applications, discussing candidates, and making final hiring decisions as a team.</p>
+        <a class="clr_3 text-decoration-none" href="">Learn More</a>
       </div>
     </div>
     
   </div>
   
+</section>
+
+<section>
+  <div class="container pt-5 pb-5">
+      <h3 class="commn-header">
+        Why businesses all across the Ontario choose Jobcart
+      </h3>
+  </div>
+
 </section>
