--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -296,7 +296,7 @@
 </section>
 
 <section>
-  <div class="bg-clr">
+  <div class="bg-clr mb-5">
   <div class="container pt-4">
       <h3 class="commn-subheader">
         Why businesses all across the Ontario choose Jobcart
@@ -676,6 +676,22 @@
           <p class="para-text">Jobcart is so simple to implement that you can be up and operating in days, not months.</p>
         </div>
       </div>
+  </div>
+</div>
+</section>
+<section>
+  <div class="container">
+
+ 
+  <div class="pt-5 row">
+    <h3 class="commn-header">
+      Let’s grow together
+    </h3>
+    <p class="text-center pt-pb mb-0">Try out our whole recruitment system risk-free, no credit card <br> required. One-stop-shop for job advertising, candidate <br> acquisition, and application management.</p>
+   <div class="d-flex justify-content-center pb-5">
+    <img style="max-height: 70vh;" src="/assets/5.jpg" class="" alt="" />
+   </div>
+   
   </div>
 </div>
 </section>
