--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,8 +1,8 @@
 <!-- hero section -->
 <section style="background-color: #267f6a;">
   <div class="container" >
-    <div class="row pt-4 align-items-center">
-      <div class="col-md-3">
+    <div class="row pt-4 align-items-center" style="padding-bottom: 5rem;">
+      <div class="col-md-4">
         <h3 class="section-para">
           We work better together with big ideas and great talent.
         </h3>
@@ -10,37 +10,42 @@
         <a href="{{appUrl}}/auth/sign-in/" class="btn btn-outline-secondary text-white">Get Started</a>
           <a href="{{url}}" target="_blank"><img src="/assets/jc-qr-code-my-white.png" class="img-fluid" /></a>
       </div>
-      <div class="col-md-9 text-end">
+      <div class="col-md-8 text-end">
         <img class="hov-eff" src="/assets/large.png" alt="">
+        
       </div>
+    
     </div>
+  
   </div>
+
 </section>
+<img class="hidden" src="/assets/triangle-hero.svg" alt="" />
 
 <!-- Jobs By Category section -->
 <section>
   <div class="container pb-5">
-    <div class="pt-5 pb-5">
+    <div class="pt-5 pb-5 d-md-flex justify-content-center">
       <h3 class="commn-header">
         Jobs By Category
       </h3>
     </div>
     <div class="row pt-3 pb-3">
-      <div class="col-md">
+      <div class="col-md mb-3">
         <div class="category-box">
           <p class="category-header">Deals</p>
           <p class="category-text">10 Active Posts</p>
         </div>
       </div>
      
-      <div class="col-md">
+      <div class="col-md mb-3">
         <div class="category-box">
         <p class="category-header">Accommodation</p>
         <p class="category-text">10 Active Posts</p>
       </div>
       </div>
      
-      <div class="col-md">
+      <div class="col-md mb-3">
         <div class="category-box">
         <p class="category-header">CNC Related Jobs</p>
         <p class="category-text">10 Active Posts</p>
@@ -48,205 +53,21 @@
       </div>
 
     
-      <div class="col-md">
+      <div class="col-md mb-3">
         <div class="category-box">
         <p class="category-header">Industrial and Building</p>
         <p class="category-text">10 Active Posts</p>
       </div>
       </div>
       
-      <div class="col-md">
+      <div class="col-md mb-3">
         <div class="category-box">
         <p class="category-header">Marketing And Sales</p>
         <p class="category-text">10 Active Posts</p>
       </div>
       </div>
     </div>
-    <div class="row pt-3 pb-3">
-      <div class="col-md">
-        <div class="category-box">
-          <p class="category-header">Deals</p>
-          <p class="category-text">10 Active Posts</p>
-        </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Accommodation</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">CNC Related Jobs</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-
-    
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Industrial and Building</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-      
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Marketing And Sales</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-    </div>
-    <div class="row pt-3 pb-3">
-      <div class="col-md">
-        <div class="category-box">
-          <p class="category-header">Deals</p>
-          <p class="category-text">10 Active Posts</p>
-        </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Accommodation</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">CNC Related Jobs</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-
-    
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Industrial and Building</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-      
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Marketing And Sales</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-    </div>
-    <div class="row pt-3 pb-3">
-      <div class="col-md">
-        <div class="category-box">
-          <p class="category-header">Deals</p>
-          <p class="category-text">10 Active Posts</p>
-        </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Accommodation</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">CNC Related Jobs</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-
-    
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Industrial and Building</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-      
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Marketing And Sales</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-    </div>
-    <div class="row pt-3 pb-3">
-      <div class="col-md">
-        <div class="category-box">
-          <p class="category-header">Deals</p>
-          <p class="category-text">10 Active Posts</p>
-        </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Accommodation</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">CNC Related Jobs</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-
-    
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Industrial and Building</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-      
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Marketing And Sales</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-    </div>
-    <div class="row pt-3 pb-3">
-      <div class="col-md">
-        <div class="category-box">
-          <p class="category-header">Deals</p>
-          <p class="category-text">10 Active Posts</p>
-        </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Accommodation</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-     
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">CNC Related Jobs</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-
-    
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Industrial and Building</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-      
-      <div class="col-md">
-        <div class="category-box">
-        <p class="category-header">Marketing And Sales</p>
-        <p class="category-text">10 Active Posts</p>
-      </div>
-      </div>
-    </div>
+   
   </div>
 </section>
 
@@ -254,35 +75,35 @@
 
 <section>
   <div class="container mb-5">
-    <div class="pt-5">
+    <div class="d-md-flex justify-content-center">
       <h3 class="commn-header">
-        Take control of every step, from finding <br>candidates to integrating them into <br>your organization.
+        Take control of every step, from finding candidates to integrating them into your organization.
       </h3>
     </div>
     <div class="row" style="padding-top: 2.5rem;
     padding-bottom: 2.5rem;">
-      <div class="col-md-6 text-center d-flex flex-column align-items-center">
+      <div class="col-md-6 text-center d-md-flex flex-column align-items-center mb-4">
         <img class="img-fluid" src="/assets/1.jpeg" alt="">
         <p class="sec-hed clr">SCOUT & ENTICE</p>
         <p class="sec-hed-para">Seek and entice potential candidates</p>
         <p class="sec-hed-text">Effortlessly fill your pipeline with candidates using tools like one-click job posting to 200+ sites, sourcing assisted by AI, employee recommendations, and more.</p>
         <a class="clr text-decoration-none" href="">Learn More</a>
       </div>
-      <div class="col-md-6 text-center d-flex flex-column align-items-center">
+      <div class="col-md-6 text-center d-md-flex flex-column align-items-center mb-4">
         <img class="img-fluid" src="/assets/2.jpg" alt="">
         <p class="sec-hed clr_1">SYSTEMATIZE & CONNECT</p>
         <p class="sec-hed-para">Recruit top talent in a fraction of the time</p>
         <p class="sec-hed-text">Accelerate your recruitment efforts with a platform that streamlines and automates routine, time-consuming procedures like interview scheduling and approvals.</p>
         <a class="clr_1 text-decoration-none" href="">Learn More</a>
       </div>
-      <div class="col-md-6 text-center d-flex flex-column align-items-center">
+      <div class="col-md-6 text-center d-md-flex flex-column align-items-center mb-4">
         <img class="img-fluid" src="/assets/3.jpg" alt="">
         <p class="sec-hed clr_2">ENGAGE & SUPERVISE</p>
         <p class="sec-hed-para">Great hiring leads to great employment</p>
         <p class="sec-hed-text">Make use of electronic signatures and personalized onboarding for new recruits while keeping all employee data in one central location..</p>
         <a class="clr_2 text-decoration-none" href="">Learn More</a>
       </div>
-      <div class="col-md-6 text-center d-flex flex-column align-items-center">
+      <div class="col-md-6 text-center d-md-flex flex-column align-items-center mb-4">
         <img class="img-fluid" src="/assets/4.jpg" alt="">
         <p class="sec-hed clr_3">EXPLORE APPRAISE & UNITE</p>
         <p class="sec-hed-para">Put the qualified candidates ahead</p>
@@ -684,12 +505,14 @@
 
  
   <div class="pt-5 row">
+    <div class="d-md-flex justify-content-center">
     <h3 class="commn-header">
       Let’s grow together
     </h3>
+  </div>
     <p class="text-center pt-pb mb-0">Try out our whole recruitment system risk-free, no credit card <br> required. One-stop-shop for job advertising, candidate <br> acquisition, and application management.</p>
    <div class="d-flex justify-content-center pb-5">
-    <img style="max-height: 70vh;" src="/assets/5.jpg" class="" alt="" />
+    <img class="grow-together" style="max-height: 70vh;" src="/assets/5.jpg" class="" alt="" />
    </div>
    
   </div>
