--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,41 +4,41 @@
     </div>
     <div class="copyright_footer-notes__e3Yqw copyright_bg-white-lilac__MG_Zv styles_left-to-c__WITFr">
       <div class="container_container__NjHmW">
-       
-          
-            <div class="row align-items-center">
-              <div class="col-md-4">
-                <p class="text-white mb-0">
-                  22 Frederick St, Suite 700, Kitchener ON N2H 6M6
-                </p>
-              </div>
-              <div class="col-md-4">
-                <div class="icon-sp">
-                  <ul class="mb-0">
-                    <li>
-                      <i class="fa-brands fa-xl fa-facebook-f text-white"></i>
-                    </li>
-                  </ul>
-                  <li>
-                    <i class="fa-brands fa-xl fa-linkedin-in text-white ms-4"></i>
-                  </li>
-                  <li>
-                    <i class="fa-brands fa-xl fa-x-twitter text-white ms-4"></i>
-                  </li>
-                  <li>
-                    <i class="fa-brands fa-xl fa-instagram text-white ms-4"></i>
-                  </li>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="text-end">
-                  <img src="/assets/app-store.svg" alt="">
-                  <img src="/assets/play-store.png" alt="" class="playstore-png">
-                </div>
-              </div>
+
+
+        <div class="row align-items-center">
+          <div class="col-md-4">
+            <p class="text-white mb-0">
+              22 Frederick St, Suite 700, Kitchener ON N2H 6M6
+            </p>
+          </div>
+          <div class="col-md-4">
+            <div class="icon-sp">
+              <ul class="mb-0">
+                <li>
+                  <i class="fa-brands fa-xl fa-facebook-f text-white"></i>
+                </li>
+              </ul>
+              <li>
+                <i class="fa-brands fa-xl fa-linkedin-in text-white ms-4"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-xl fa-x-twitter text-white ms-4"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-xl fa-instagram text-white ms-4"></i>
+              </li>
             </div>
-          
-     
+          </div>
+          <div class="col-md-4">
+            <div class="text-end">
+              <img src="/assets/app-store.svg" alt="" class="appstore-png">
+              <img src="/assets/play-store.png" alt="" class="playstore-png">
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </div>
@@ -57,7 +57,6 @@
           <a href="terms-of-service"> Terms Of Service </a>
         </div>
       </div>
-      </div>
+    </div>
   </div>
 </div>
-
