--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -10,6 +10,20 @@
     margin-top: 1.25rem;
     margin-bottom: 1.25rem 
 }
+img.hidden {
+    position: absolute;
+    right: 0;
+    top: auto;
+    bottom: auto;
+    left: auto;
+    transform: translate(-51%, -68%);
+    transition-duration: .3s;
+
+}
+// img.hidden:hover{
+// --tw-rotate: 6deg !important;
+//     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+// }
 a.btn.btn-outline-secondary.text-white {
     border: 1px solid white;
     padding: 12px 80px;
@@ -20,6 +34,7 @@ a.btn.btn-outline-secondary.text-white {
 }
 .commn-header{
     text-align: center;
+    width: 56%;
     font-weight: 600;
     --tw-text-opacity: 1;
     color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -53,8 +68,12 @@ a.btn.btn-outline-secondary.text-white {
     line-height: 1.25rem;
     margin-bottom: 0;
 }
-.img-fluid {
-    max-width: 83%;
+// .img-fluid {
+//     max-width: 83%;
+//     height: auto;
+// }
+img.img-fluid.mobile {
+    width: 83% !important;
     height: auto;
 }
 .sec-hed{
