--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,15 +4,59 @@
 @import 'bootstrap/scss/mixins';
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif
 }
+
 html,
 body {
     height: 100%;
 }
 
+@media (max-width: 767px) {
+    img.hidden {
+        display: none;
+    }
 
+    img {
+        width: -webkit-fill-available;
+        width: 100%;
+    }
 
+    img.appstore-png {
+        width: fit-content;
+    }
 
+    .row.pt-4.align-items-center {
+        display: flex !important;
+        flex-direction: column-reverse !important;
+    }
+    // img.mobile {
+    //     width: 100% !important;
+    // }
+    a.btn.btn-outline-secondary.text-white{
+        padding: 12px 16px !important;
+    }
+    .commn-header {
+        text-align: left !important;
+        margin-top: 2rem !important;
+        font-size: 1.25rem !important;
+        line-height: 1.75rem !important;
+        width: 100% !important;
+    }
+    .sec-hed, .sec-hed-para{
+      text-align: left !important;
+    }
+    .section-para {
+        font-size: 1.875rem !important;
+        line-height: 2.25rem !important;
+        font-weight: 500 !important;
+    }
+    .sec-hed-text {
+      width: 100% !important;
+    }
+}
+
+@media screen and (max-width:1198px) {}
