--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -141,6 +141,9 @@ padding-top: 2.5rem;
 padding-bottom: 2.5rem;
 
 }
+.w-40 {
+    width: 40%;
+}
 .bg-clr{
     --tw-bg-opacity: 1;
     background-color: rgb(240 253 244 / var(--tw-bg-opacity));
