--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -30,22 +30,22 @@
         Jobs By Category
       </h3>
     </div>
-    <div class="row pt-3 pb-3">
-      <div class="col-md mb-3">
+    <div class="row pt-3 pb-3 row-cols-1 row-cols-sm-2 row-cols-md-5 justify-content-center">
+      <div class="col mb-3">
         <div class="category-box">
           <p class="category-header">Deals</p>
           <p class="category-text">10 Active Posts</p>
         </div>
       </div>
      
-      <div class="col-md mb-3">
+      <div class="col mb-3">
         <div class="category-box">
         <p class="category-header">Accommodation</p>
         <p class="category-text">10 Active Posts</p>
       </div>
       </div>
      
-      <div class="col-md mb-3">
+      <div class="col mb-3">
         <div class="category-box">
         <p class="category-header">CNC Related Jobs</p>
         <p class="category-text">10 Active Posts</p>
@@ -53,14 +53,126 @@
       </div>
 
     
-      <div class="col-md mb-3">
+      <div class="col mb-3">
         <div class="category-box">
         <p class="category-header">Industrial and Building</p>
         <p class="category-text">10 Active Posts</p>
       </div>
       </div>
       
-      <div class="col-md mb-3">
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      <div class="col mb-3">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      <div class="col mb-3">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Marketing And Sales</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      <div class="col mb-3">
+        <div class="category-box">
+          <p class="category-header">Deals</p>
+          <p class="category-text">10 Active Posts</p>
+        </div>
+      </div>
+     
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Accommodation</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+     
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">CNC Related Jobs</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+    
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+
+      <div class="col mb-3">
+        <div class="category-box">
+        <p class="category-header">Industrial and Building</p>
+        <p class="category-text">10 Active Posts</p>
+      </div>
+      </div>
+      
+      <div class="col mb-3">
         <div class="category-box">
         <p class="category-header">Marketing And Sales</p>
         <p class="category-text">10 Active Posts</p>
@@ -506,15 +618,19 @@
  
   <div class="pt-5 row">
     <div class="d-md-flex justify-content-center">
-    <h3 class="commn-header">
+    <h3 class="commn-header text-position">
       Let’s grow together
     </h3>
   </div>
-    <p class="text-center pt-pb mb-0">Try out our whole recruitment system risk-free, no credit card <br> required. One-stop-shop for job advertising, candidate <br> acquisition, and application management.</p>
-   <div class="d-flex justify-content-center pb-5">
-    <img class="grow-together" style="max-height: 70vh;" src="/assets/5.jpg" class="" alt="" />
+  <div class="d-md-flex justify-content-center">
+    <p class="text-center pt-pb mb-0 w-40">Try out our whole recruitment system risk-free, no credit card required. One-stop-shop for job advertising, candidate acquisition, and application management.</p>
+  </div>
+    <div class="d-flex justify-content-center pb-5">
+    <img src="/assets/5.jpg" class="" alt="" width="50%" />
    </div>
    
   </div>
 </div>
 </section>
+
+
