--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="text-end">
+            <div class="text-end img-position">
               <img src="/assets/app-store.svg" alt="" class="appstore-png">
               <img src="/assets/play-store.png" alt="" class="playstore-png">
             </div>
